--- a/src/app/features/auth/login/login/login.component.html
+++ b/src/app/features/auth/login/login/login.component.html
@@ -6,7 +6,7 @@
       style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
       <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
         <div class="text-center mb-5">
-          <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
+          <img src="assets/layout/images/avatar.png" alt="Image" style="height: 70px; border-radius:50%" class="mb-3">
           <div class="text-900 text-3xl font-medium mb-3">Rejoignez la course</div>
           <span class="text-600 font-medium">Connectez-vous pour continuer</span>
         </div>
