--- a/src/app/features/home/homepage/homepage.component.html
+++ b/src/app/features/home/homepage/homepage.component.html
@@ -185,7 +185,7 @@
       <div class="grid mt-8 pb-2 md:pb-8">
         <div class="flex justify-content-center col-12 lg:col-6 bg-purple-100 p-0 flex-order-1 lg:flex-order-0"
              style="border-radius:8px;">
-          <img ngSrc="assets/layout/images/runner1.png" class="w-8" alt="mockup mobile" height="719" width="515">
+          <img ngSrc="assets/layout/images/runner1.png" class="w-8" alt="mockup mobile" height="719" width="515" priority>
         </div>
 
         <div class="col-12 lg:col-6 my-auto flex flex-column lg:align-items-end text-center lg:text-right">
@@ -211,7 +211,7 @@
 
         <div class="flex justify-content-end flex-order-1 sm:flex-order-2 col-12 lg:col-6 bg-yellow-100 p-0"
              style="border-radius:8px; justify-content: center !important;">
-          <img ngSrc="assets/layout/images/runner2.png" class="w-8" alt="mockup" height="719" width="515">
+          <img ngSrc="assets/layout/images/runner2.png" class="w-8" alt="mockup" height="719" width="515" priority>
         </div>
       </div>
     </div>
