--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     style="top:120px">
     <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
       <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'home'})" pRipple
+        <a (click)="router.navigate(['/'], {fragment: 'home'})" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Accueil</span>
         </a>
@@ -46,7 +46,7 @@
         </a>
       </li>
       <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'pricing'})" pRipple
+        <a (click)="router.navigate(['/contact'], {fragment: 'pricing'})" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Une question ? </span>
         </a>
