Updated : contact form

--- a/src/app/features/contact/contact-form/contact-form.component.html
+++ b/src/app/features/contact/contact-form/contact-form.component.html
@@ -100,7 +100,6 @@
               </p-autoComplete>
             </div>
 
-
             <button
               pButton
               pRipple
@@ -108,6 +107,7 @@
               class="w-full text-xl"
               [disabled]="contactForm.invalid">
             </button>
+          </div>
         </form>
       </div>
     </div>
