Updated : footer links

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -18,27 +18,27 @@
           <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700" routerLink="/register">Devenir
             membre</a>
           <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700" routerLink="/login">Se connecter</a>
-          <a class="line-height-3 text-xl block cursor-pointer text-700">Media Kit</a>
         </div>
 
         <div class="col-12 md:col-3 mt-4 md:mt-0">
           <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Communauté</h4>
           <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700"
              href="https://runstorebordeaux.simplybook.it/v2/">Notre partenaire</a>
-          <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">FAQ</a>
-          <a class="line-height-3 text-xl block cursor-pointer text-700"
-             href="https://www.runningmag-aquitaine.fr/com/course_calendrier.php">Évènements</a>
-        </div>
-
-        <div class="col-12 md:col-3 mt-4 md:mt-0">
-          <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Réseaux</h4>
-          <a class="line-height-3 text-xl block cursor-pointer text-700">Conditions de service</a>
           <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700"
              href="https://www.instagram.com/a2running/">Instagram<img
             src="assets/demo/images/landing/instagram-svgrepo-com.svg" class="ml-2" alt=""/></a>
           <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700"
              href="https://www.facebook.com/A2Running">Facebook<img
             src="assets/demo/images/landing/facebook-svgrepo-com.svg" class="ml-2" alt=""/></a>
+        </div>
+
+        <div class="col-12 md:col-3 mt-4 md:mt-0">
+          <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Informations</h4>
+          <a class="line-height-3 text-xl block cursor-pointer text-700">Conditions de service</a>
+          <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">FAQ</a>
+          <a class="line-height-3 text-xl block cursor-pointer text-700"
+             href="https://www.runningmag-aquitaine.fr/com/course_calendrier.php">Évènements</a>
+
         </div>
       </div>
     </div>
