--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,37 +16,31 @@
     style="top:120px">
     <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
       <li>
-        <a (click)="router.navigate(['/'], {fragment: 'home'})" pRipple
+        <a (click)="router.navigate(['/'])" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Accueil</span>
         </a>
       </li>
       <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'features'})" pRipple
+        <a (click)="router.navigate(['/runs'])" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Courses</span>
         </a>
       </li>
       <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'highlights'})" pRipple
-           class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-          <span>Les professeurs</span>
-        </a>
-      </li>
-      <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'pricing'})" pRipple
+        <a (click)="router.navigate(['/me'])" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Mon profil</span>
         </a>
       </li>
       <li>
-        <a (click)="router.navigate(['/landing'], {fragment: 'pricing'})" pRipple
+        <a (click)="router.navigate(['/about'])" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>A propos</span>
         </a>
       </li>
       <li>
-        <a (click)="router.navigate(['/contact'], {fragment: 'pricing'})" pRipple
+        <a (click)="router.navigate(['/contact'])" pRipple
            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
           <span>Une question ? </span>
         </a>
