--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@
 @import "assets/demo/styles/flags/flags.css";
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
+
+.p-accordion-header-text {
+  color: var(--green-800);
+}
