Updated: login and register button to go back to home

--- a/src/app/features/auth/register/register/register.component.html
+++ b/src/app/features/auth/register/register/register.component.html
@@ -1,4 +1,6 @@
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+  <button pButton pRipple type="button" icon="pi pi-arrow-left" class="p-button-rounded" style="margin-right: 5rem"
+          label="Retour" routerLink="/"></button>
   <div class="flex flex-column align-items-center justify-content-center">
     <img
       src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logoA2-dark' : 'logoA2-white'}}.png"
